# hf-agents-course

./: .gitignore  README.md  dummy.ipynb  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
fine_tune_bert/: bert-classify-sentiment.ipynb  mrpc-fine-tuning-trainer.ipynb
fine_tuning_llm/: mrpc-dataset.ipynb  mrpc-training.ipynb
lora/: smoltalk-distilgpt2-M2-lora.ipynb
sft/: smoltalk-distilgpt2-M2.ipynb  smoltalk-distilgpt2-a16.ipynb  smoltalk-distilgpt2-l4.ipynb  smoltalk-lts-gpt2-sm-M2.ipynb  smoltalk-lts-gpt2-sm-M2.py
smolagents/: code_agent.ipynb  code_agent_interenet_researcher.ipynb  code_agents.ipynb  code_agents_tutorial.ipynb
trian_fine_tune_llms/: mrpc-fine-tuning.ipynb  mrpc-full-training.ipynb
