[project]
name = "hf-agents-course"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "repetitioestmaterstudiorum", email = "44611591+repetitioestmaterstudiorum@users.noreply.github.com"},
]
dependencies = ["huggingface-hub>=0.28.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
]
