[project]
name = "hf-agents-course"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "repetitioestmaterstudiorum", email = "44611591+repetitioestmaterstudiorum@users.noreply.github.com"},
]
dependencies = ["torch>=2.6.0", "transformers>=4.49.0", "huggingface-hub>=0.29.1", "tqdm>=4.67.1", "datasets>=3.3.2", "accelerate>=1.4.0", "numpy>=2.2.3", "evaluate>=0.4.3", "scikit-learn>=1.6.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "nbformat>=5.10.4",
    "plotly>=6.0.0",
]
